# AI_NEWS

./: .env.example  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
db/: chroma.sqlite3
docs/: architecture.md  new_crew_setup.md  problem_statement.md  project_documentation.html  project_documentation.md  project_guide.md
results/: draft.html  editorial.md  news.md  newsletter.html
src/assignment/: crew.py  main.py  schemas.py
src/assignment/config/: agents.yaml  tasks.yaml
